# Group1_ADO_T01

./: .gitignore  .sqlfluff  .user.yml  README.md  Updated_dbt_project.yml  app.py  dbt cloud testing  dbt_project.yml  mysql_s3_incremental_load.py  profiles.yml  pyproject.toml  requirements.txt  s3-snowflake-incrementalload.py  s3-snowflake-load.py  s3_snowflake_incremental_load.py  s3_snowflake_initial_load.py  s3_snowflake_remove_incremental_load.py  workflows
.github/tanhongkai_workflow/: tanhongkai.yml
.github/workflows/: Mart_SQL_linter.yml  airflowCICD.yml  airflow_dag_linter.yml  dbt_workflow  dbt_workflow.yml  main.yml  python.yml  pythonCI.yml  pythonlinter.yml  sqlCICD.yml  sqllinter.yml  workflow_linter.yml
.github/zavier_workflows/: setting_up_basic_workflow_zavier.yml
Data_Tables/: CreateTables.sql
Set-Up_Documentation/: Dbt Cloud Job  airflow_orchestration.md  data_migration.md  dbt_transformation.md
Sprint_1/: CONTOSO Data Cleansing.yxmd  Contoso Data Cleansed.yxmd
Sprint_2/: Create Tables (Old Version).sql  Create Tables.sql  HONGKAILOVESADO CONTOSO DATA DICTIONARY.xlsx
Sprint_3/: Create Tables (Revised).sql  CreateTables.sql  Data Dictionary (Fixed).xlsx
airflow_dag/: Dockerfile  dbt_dags.py  requirements.txt  s3_to_snowflake.py
airflow_dag/airflow_venv/: pyvenv.cfg
airflow_dag/dags/: dbt_to_snowflake.py  mysql_to_s3_snowflake.py  mysql_to_s3_to_snowflake.py  s3_to_snowflake.py
airflow_dag/files/: .user.yml  s3_snowflake_incremental_load.py
models/: days_since_first_purchase.sql
models/alteryx_cleaned/: ac_ACCOUNT.sql  (+27 more)
(+189 files in other folders)
