[project]
name = "s3-data-transfer"
version = "0.1.0"
description = "Code that transfer data from s3 to snowflake"

dependencies = [
    "datetime>=2.3",
    "snowflake-connector>=1.0.2",
]

[project.optional-dependencies]
testing = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]
dev = [
    "black",
    "flake8",
]
